Added dynamic data to recyclable lists for RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="imc_obesity_one">Obesidade Grau I</string>
     <string name="imc_several_obesity">Obesidade Extrema</string>
     <string name="your_imc_is">Seu imc é: %.2f</string>
+    <string name="label_tmb">TMB</string>
 
 </resources>
